<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ballsbutton"
        android:id="@+id/ballsbutton"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zerotext"
        android:id="@+id/ballstext"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ballsbutton"
        android:layout_marginTop="25px" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foulsbutton"
        android:id="@+id/foulsbutton"
        android:layout_below="@+id/ballsbutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zerotext"
        android:id="@+id/foulstext"
        android:layout_alignTop="@+id/foulsbutton"
        android:layout_toEndOf="@+id/ballstext"
        android:layout_marginTop="25px" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strikesbutton"
        android:id="@+id/strikesbutton"
        android:layout_below="@+id/foulsbutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zerotext"
        android:id="@+id/strikestext"
        android:layout_alignTop="@+id/strikesbutton"
        android:layout_alignStart="@+id/foulstext"
        android:layout_marginTop="25px" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outsbutton"
        android:id="@+id/outsbutton"
        android:layout_below="@+id/strikesbutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zerotext"
        android:id="@+id/outstext"
        android:layout_alignTop="@+id/outsbutton"
        android:layout_toEndOf="@+id/outsbutton"
        android:layout_marginTop="25px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/awayteam"
        android:id="@+id/textView"
        android:layout_below="@+id/outsbutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zerotext"
        android:id="@+id/awayscore"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hometeam"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zerotext"
        android:id="@+id/homescore"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/currentteam"
        android:id="@+id/currentteam"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView2"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textColor="#ffff0017" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/runsbutton"
        android:id="@+id/runsbutton"
        android:layout_below="@+id/outsbutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zerotext"
        android:id="@+id/runstext"
        android:layout_alignTop="@+id/runsbutton"
        android:layout_toEndOf="@+id/runsbutton"
        android:layout_marginTop="25px"
        android:numeric="integer" />

</RelativeLayout>
